Fixes account dialog widths on mobile.

--- a/src/app/activate/activate.component.scss
+++ b/src/app/activate/activate.component.scss
@@ -3,8 +3,6 @@
 }
 
 .activate-container {
-    width: 300px;
-    display: inline-block;
     padding: 20px 40px;
     text-align: center;
 }
