--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,4 @@
 .login-container {
-    width: 300px;
-    display: inline-block;
     padding: 20px 40px;
     text-align: center;
 }
